<?xml version="1.0"?>
<package format="2">
  <name>camfitool</name>
  <version>1.2.2</version>
  <description>The CamFITool ROS Package</description>

  <maintainer email="bilgi@inovasyonmuhendislik.com">İnovasyon Muhendislik</maintainer>
  <author email="kerem.erdogmus@inovasyonmuhendislik.com">Alim Kerem Erdogmus</author>

  <license>Apache 2.0</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
